name:                versioning-servant
version:             0.1.0.0
synopsis:            Servant combinators for the versioning library.
description:         This package provides Servant combinators to be used with
                     the 'versioning' library.
homepage:            https://github.com/lortabac/versioning
license:             Apache-2.0
license-file:        LICENSE
author:              Lorenzo Tabacchini
maintainer:          lortabac@gmx.com
copyright:           (c) 2018 Lorenzo Tabacchini
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Versioning.Servant
  build-depends:       base >=4.10 && <4.12
                     , aeson >=1.0 && <1.5
                     , attoparsec
                     , bytestring >=0.10 && <0.11
                     , http-media
                     , servant
                     , versioning >=0.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:       -Wall

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  other-modules:       Tests.Versioning.Servant.Fixtures
  build-depends:       base >=4.10 && <4.12
                     , aeson >=1.0 && <1.5
                     , bytestring >=0.10 && <0.11
                     , hspec >=2.0 && <2.6
                     , hspec-wai >=0.9
                     , servant
                     , servant-server
                     , versioning
                     , versioning-servant
                     , wai
                     , wai-extra
  hs-source-dirs:      tests
  default-language:    Haskell2010
  ghc-options:       -Wall
