name:                versioning
version:             0.3.0.0
synopsis:            Type-safe data versioning.
description:         This package provides various tools to deal with
                     data versioning in a type-safe way.
homepage:            https://github.com/lortabac/versioning
license:             Apache-2.0
license-file:        LICENSE
author:              Lorenzo Tabacchini
maintainer:          lortabac@gmx.com
copyright:           (c) 2018 Lorenzo Tabacchini
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Versioning.Base
                     , Versioning.Internal.Base
                     , Versioning.Internal.Decoding
                     , Versioning.Upgrade
                     , Versioning.JSON
  other-modules:       Versioning.Internal.Equality
  build-depends:       base >=4.10 && <4.12
                     , aeson >=1.0 && <1.5
                     , bytestring >=0.10 && <0.11
                     , semigroupoids >=5 && <6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:       -Wall

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  other-modules:       Tests.Versioning.Fixtures
  build-depends:       base >=4.10 && <4.12
                     , aeson >=1.0 && <1.5
                     , bytestring >=0.10 && <0.11
                     , hspec >=2.0 && <2.6
                     , versioning
  hs-source-dirs:      tests
  default-language:    Haskell2010
  ghc-options:       -Wall
